feat: create Invoice and its entity and addresses models, setup form multipart
Setup form for uploading a single xml invoice or zip of xml invoices
Add Both NFe Use Cases
Add rubyzip for Zip Extraction
Shine light on a possible structure of Services in Invoice#create action
Implement Drag and Drop functionality for File Upload

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,15 @@
     <%= hotwire_livereload_tags if Rails.env.development? %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
+  <body class="h-screen bg-zinc-800 dark:bg-gray-300 text-white dark:text-black">
+    <main class="antialiased">
+      <div class="p-3">
+        <%= render "shared/flash" %>
+      </div>
+
+      <section class="container mx-auto mt-16 px-5 flex">
+        <%= yield %>
+      </section>
     </main>
   </body>
 </html>
