--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,15 @@
     <%= hotwire_livereload_tags if Rails.env.development? %>
   </head>
 
-  <body class="h-screen bg-zinc-800 dark:bg-gray-300 text-white dark:text-black">
+  <body class="antialiased bg-gradient-to-r from-gray-700 via-gray-900 to-gray-800">
+    <%= render "shared/nav" %>
+
     <main class="antialiased">
       <div class="p-3">
         <%= render "shared/flash" %>
       </div>
 
-      <section class="container mx-auto mt-16 px-5 flex">
+      <section class="container mx-auto mt-12 px-5 flex">
         <%= yield %>
       </section>
     </main>
