--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -14,7 +14,7 @@
           <% end %>
           <div class="ml-3 w-0 flex-1 pt-0.5">
             <p class="text-sm font-medium text-gray-900">
-            <%= t("attention") %>
+            <%= t("flash.#{notice ? :notice : :alert}") %>
             </p>
             <p class="mt-1 text-sm text-gray-500">
             <%= notice || alert %>
