--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <%= render "shared/flash" %>
       </div>
 
-      <section class="container mx-auto mt-12 px-5 flex">
+      <section class="container mx-auto p-4 m-2 flex-1">
         <%= yield %>
       </section>
     </main>
