--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -13,7 +13,10 @@
           <%= link_to I18n.t("invoices.new"), new_invoice_path, class: "md:p-4 py-2 block hover:text-purple-400" %>
         </li>
         <li>
-          <%= link_to I18n.t("invoices.reports"), invoices_path, class: "md:p-4 py-2 block hover:text-purple-400" %>
+          <%= link_to I18n.t("invoices.title"), invoices_path, class: "md:p-4 py-2 block hover:text-purple-400" %>
+        </li>
+        <li>
+          <%= link_to I18n.t("reports.title"), reports_path, class: "md:p-4 py-2 block hover:text-purple-400" %>
         </li>
         <li>
           <%= link_to I18n.t("nav.about"), "https://github.com/RickHPotter", class: "md:p-4 py-2 block hover:text-purple-400", target: "_blank" %>
