deploy: successful deploy on azure
https://webapprails-hxaqadbba7ezhdcm.brazilsouth-01.azurewebsites.net/

--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div class="table-cell px-6 py-4 whitespace-no-wrap text-sm leading-5 font-medium text-gray-900">
-      <%= report.finished ? "Finished" : "Pending" %>
+      <%= report.finished ? "FINALIZADO" : "PENDENTE" %>
     </div>
 
     <div class="table-cell px-6 py-4 whitespace-no-wrap text-right text-sm leading-5 font-medium">
