feat: add excel report generation
Add xls gem for excel generation
Create Service for generating excel report
Fix some tables styles

--- a/app/views/shared/pagy/_nav.html.erb
+++ b/app/views/shared/pagy/_nav.html.erb
@@ -76,7 +76,7 @@
             <%== link.call(item, item, "class='page--link active' data-turbo-action='advance'") %>
           <% when :gap # page gap %>
             <span class="page--link">
-              <%== pagy_t('pagy.nav.gap') %>
+              <%== pagy_t("pagy.nav.gap") %>
             </span>
           <% end %>
         <% end %>
