--- a/app/views/reports/_list.html.erb
+++ b/app/views/reports/_list.html.erb
@@ -6,23 +6,23 @@
           <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
             <div class="min-w-full divide-y divide-gray-200 table">
               <div class="table-row">
-                <div class="table-cell px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                <div class="table-cell border-2 px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
                   ID
                 </div>
 
-                <div class="table-cell px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                <div class="table-cell border-2 px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
                   <%= attribute_model(@reports, :total_invoices) %>
                 </div>
 
-                <div class="table-cell px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                <div class="table-cell border-2 px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
                   <%= attribute_model(@reports, :processed_invoices) %>
                 </div>
 
-                <div class="table-cell px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                <div class="table-cell border-2 px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
                   <%= attribute_model(@reports, :finished) %>
                 </div>
 
-                <div class="table-cell px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
+                <div class="table-cell border-2 px-6 py-3 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
                   <%= t("links.actions") %>
                 </div>
               </div>
